# cmake_practice

./: .gitignore
targets_and_dependencies/: CMakeLists.txt  CMake_notes.md  tutorial.cxx
targets_and_dependencies/include/: TutorialConfig.hpp  TutorialConfig.hpp.in
targets_and_dependencies/include/lib_arch/: lib_arch.hpp
targets_and_dependencies/include/lib_calc/: lib_calc.hpp
targets_and_dependencies/include/lib_print/: lib_print.hpp
targets_and_dependencies/lib/: CMakeLists.txt
targets_and_dependencies/lib/lib_calc/: CMakeLists.txt
targets_and_dependencies/lib/lib_print/: CMakeLists.txt
targets_and_dependencies/src/: tutorial.cxx
targets_and_dependencies/src/lib_arch/: CMakeLists.txt  lib_arch.cxx
targets_and_dependencies/src/lib_calc/: CMakeLists.txt  lib_calc.cxx
targets_and_dependencies/src/lib_print/: lib_print.cxx
